WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197813
[macOS] Font formatting options don't work when composing a message in Yahoo mail
https://bugs.webkit.org/show_bug.cgi?id=197813
Summary
[macOS] Font formatting options don't work when composing a message in Yahoo ...
Wenson Hsieh
Reported
2019-05-10 21:19:45 PDT
<
rdar://problem/49382250
>
Attachments
Patch
(6.34 KB, patch)
2019-05-12 20:51 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-05-10 21:22:42 PDT
To reproduce: 1. Go to mail.yahoo.com 2. Hit the Compose button and insert some text 3. Select the text 4. Make the window smaller if needed, such that the "…" button appears in the bottom toolbar 5. Click "…" > "Aa Font" > "Huge" Expected: the text selected in step (3) should become enormous Observed: the previously selected text did not change at all
Wenson Hsieh
Comment 2
2019-05-12 20:51:23 PDT
Created
attachment 369690
[details]
Patch
WebKit Commit Bot
Comment 3
2019-05-13 09:52:11 PDT
Comment on
attachment 369690
[details]
Patch Clearing flags on attachment: 369690 Committed
r245238
: <
https://trac.webkit.org/changeset/245238
>
WebKit Commit Bot
Comment 4
2019-05-13 09:52:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug